[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art Assets/Baskets.png" type="Texture" id=1]
[ext_resource path="res://Scripts/DiceBasket.gd" type="Script" id=2]
[ext_resource path="res://Art Assets/ExclamationPoint.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 10.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 12 )

[node name="DiceBasket" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( 0, 20 )
shape = SubResource( 2 )

[node name="InZone" type="Sprite" parent="."]
position = Vector2( 0, -20 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_PlayerDetection_body_exited"]
